--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
-/backend/node_modules
-/backend/.DS_Store
-/frontend/.DS_Store
+backend/node_modules
+backend/.DS_Store
+frontend/.DS_Store
+backend/dados.db
